--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,7 @@ input.days {
   min-width: 768px;
   margin-left: auto;
   margin-right: auto;
+  box-shadow: 0px -5px 12px rgba(0, 1, 1, 0.2);
 
 }
 .main-header {
