--- a/css/style.css
+++ b/css/style.css
@@ -1504,25 +1504,40 @@ input[type='radio'].visually-hidden {
 .star.two {
   width: 40px;
 }
+
 .search-form {
   display: none;
 }
+
 @keyframes bang {
   0% {transform: translateY(-28px);}
   60% {transform: translateY(10px);}
   100% {transform: translateY(0px);}
 }
+
 .modal-show {
   position: absolute;
   display: block;
   animation-name: bang;
   animation-duration: 0.6s;
   box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
-  top: 0;
+  top: 0%;
   left: 26.4%;
 }
 
-/* .interactive-map {
+.interactive-map iframe {
+  border: none;
   position: relative;
   background-size: cover;
-} */
+  width: 100%;
+}
+
+@keyframes shake {
+  0%, 100% {transform: translateY(0);}
+  10%, 30%, 50%, 70%, 90% {transform: translateY(-10px);}
+  20%, 40%, 60%, 80% {transform: translateY(0);}
+}
+.modal-error {
+  animation-name: shake;
+  animation-duration: 0,6s;
+}
